------------------------------------------------------------------------
r1961 | gaser | 2022-03-02 14:09:07

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_vol_sanlm.m
M       html/cat.html

Fixed: For skull-stripped data noise while using sanlm-filter was added even 
       in zero-valued areas.
------------------------------------------------------------------------
r1960 | dahnke | 2022-03-01 17:31:23 +0100 (Tue, 01 Mar 2022) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_long_main.m
M       cat_long_report.m

(1) Fixed:   Corrected bugs in cat_long_main and cat_long_report.

------------------------------------------------------------------------
r1959 | dahnke | 2022-03-01 15:22:21 +0100 (Tue, 01 Mar 2022) | 12 lines

Changed paths:
M       CHANGES.txt
M       cat_vol_groupwise_ls.m
M       cat_vol_series_align.m

(1) New:      Added parameter to force isotropic resolution in longitudinal 
              average estimation in cat_vol_groupwise_ls controlled in 
              cat_vol_series_align. Currently, the optimized version is active
              that will optimize the resolution if the input resolution is not
              isotropic.


------------------------------------------------------------------------
r1958 | dahnke | 2022-02-28 22:42:18 +0100 (Mon, 28 Feb 2022) | 11 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_long.m
M       cat_long_main.m

(1) New:      Added new longitudinal development model (0) that focuses on the 
              cross-sectional pipeline. The model includes use of an average 
              based TPM creation to improve the longitudinal processing. 
              Major changes in cat_long_main and cat_conf_long.


------------------------------------------------------------------------
r1957 | dahnke | 2022-02-28 21:10:19 +0100 (Mon, 28 Feb 2022) | 14 lines

Changed paths:
M       CHANGES.txt
M       cat_io_file_move.m
M       cat_main_updateSPM.m
M       cat_main_updateSPM1639.m